Try 6: Fixing horizontal scroll on mobile screens

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -167,6 +167,7 @@ html {
 
   .hamburger-menu-mobile {
     display: none;
+    background-color: red;
   }
 
   .brand-menu {
